kubernetes/infrastructure/production/networking/traefik/rpi-forward-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rpi-cluster-service
  namespace: networking
spec:
  externalName: 172.16.20.70
  type: ExternalName
